Deleted unnecessary vicnode form files and removed the hardcode in vicnode form
Change-Id: I33d037c89595b07885e1874ec0ac8e0a930acadf

--- a/app/index.html
+++ b/app/index.html
@@ -28,12 +28,6 @@
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/underscore/underscore-min.js"></script>
 <script src="bower_components/ng-dialog/js/ngDialog.js"></script>
-
-<!-- need to figure it out how to use version -->
-<!--<script src="components/version/version.js"></script>-->
-<!--<script src="components/version/version-directive.js"></script>-->
-<!--<script src="components/version/interpolate-filter.js"></script>-->
-
 <script src="js/crams.config.js"></script>
 <script src="app.js"></script>
 <script src="js/service/flash.service.js"></script>
@@ -66,16 +60,9 @@
 <script src="js/directive/contactcard.directive.js"></script>
 <script src="js/createcontactform.controller.js"></script>
 <script src="js/directive/createcontact.directive.js"></script>
-<script src="js/vicnode.request.controller.js"></script>
-<script src="js/service/questions.service.js"></script>
-<script src="js/service/projectquestionresponses.service.js"></script>
-<script src="js/questiontextwidget.controller.js"></script>
-<script src="js/questiondropdownwidget.controller.js"></script>
-<script src="js/directive/projectquestiontextwidget.directive.js"></script>
-<script src="js/directive/projectquestiondropdownwidget.directive.js"></script>
-<script src="js/service/projectmodel.service.js"></script>
-<script src="js/requestquestionsresponses.controller.js"></script>
-<script src="js/vicnode.storage_requests.controller.js"></script>
 <script src="js/service/vicnode.request.service.js"></script>
+<script src="js/service/vn_questions.service.js"></script>
+<script src="js/vicnode/vicnode.request.controller.js"></script>
+<script src="js/vicnode/vicnode.declineapprove.controller.js"></script>
 </body>
 </html>
