changed chief investigator implementation, make chief investigator ui section more nice
Change-Id: I2a78b6ea12f1862e097230d99d2d42a5682a0c2a

--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,8 @@
 <script src="js/termsconditions.controller.js"></script>
 <script src="js/error.controller.js"></script>
 <script src="js/approval.controller.js"></script>
+<script src="js/contact.controller.js"></script>
+<script src="js/directive/contact.directive.js"></script>
 <script src="js/nectar.request.controller.js"></script>
 <script src="js/alloc.detail.controller.js"></script>
 <script src="js/alloc.declineapprove.controller.js"></script>
@@ -55,10 +57,10 @@
 <script src="js/popup.controller.js"></script>
 <script src="js/directive/popup.directive.js"></script>
 <script src="js/directive/provision.details.directive.js"></script>
-<script src="js/contactsearchform.controller.js"></script>
-<script src="js/contactcard.controller.js"></script>
+<script src="js/vicnode/contactsearchform.controller.js"></script>
+<script src="js/vicnode/contactcard.controller.js"></script>
 <script src="js/directive/contactcard.directive.js"></script>
-<script src="js/createcontactform.controller.js"></script>
+<script src="js/vicnode/createcontactform.controller.js"></script>
 <script src="js/directive/createcontact.directive.js"></script>
 <script src="js/service/vicnode.request.service.js"></script>
 <script src="js/service/vn_questions.service.js"></script>
