fixed storage product negative value input bug changed request details, error page layouts to make better look and feel. added nectar.ico
Change-Id: Ifbf876cfdf84081215d53b681cc2d0ed4e36d79c

--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="images/nectar.ico">
     <meta charset="UTF-8">
     <title>NeCTAR Allocations</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
